Revert "Simplify the Dockerfile as in https://www.rokpoto.com/jenkins-docker-in-docker-agent/" as the containers does not start